# pavlok-python-client

./: .env.sample  .gitignore  README.md  app-fastapi.py  app-flask.py  app.py  requirements.txt  setup.cfg  setup.py  simple-dashboard.py  test.py
examples/: simple-dashboard.py
examples/integrations/: .env.sample  app.py  clickup.py  main.py  requirements.txt  sqlite.db
examples/integrations/clickup/: .env.sample  __init__.py  clickup.db  clickup.py  router.py  services.py
examples/integrations/clickup/sensorcore/: database.py  schemas.py
examples/integrations/clickup/static/css/: main.css
examples/integrations/clickup/static/js/: init-alpine.js
examples/integrations/clickup/templates/: clickup.html  index.html  layout.html
examples/integrations/core/: database.py  enums.py  models.py  services.py
examples/integrations/pav_todoist/: router.py  services.py
examples/integrations/static/js/: init-alpine.js
examples/integrations/templates/: base.html  layout.html  login.html  todoist.html
pavlok/: client.py
src/: app.py  requirements.txt
src/pavlok/: main.py  test_main.py
