[metadata]
name = pavlok
version = 0.2.0
author = Maneesh Sethi
author_email = maneesh@pavlok.com
description = Pavlok python client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Pavlok/pavlok-python-client
project_urls =
    Bug Tracker = https://github.com/Pavlok/pavlok-python-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    Authlib==0.15.4
    fastapi==0.68.1
    pydantic==1.8.2
    starlette==0.14.2
    uvicorn==0.15.0
    httpx==0.19.0
    itsdangerous==2.0.1
    python-dotenv==0.19.0
    Jinja2==3.0.1

[options.packages.find]
where = src